Improve combat system and fix a bunch of bugs.
- Fix combat probability running too much
- Move combat probability into dungeon key event handler
- Add mediator switch between arena/dungeon smoothly
- Add screen object
- Fix screen scrolling when pressing arrow keys
- Refactor and clean up code for combat
- Fix bug where event handlers not being removed properly

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,8 +103,8 @@ body {
     width: 50%;
 }
 
-.enemy-wrap .entity-status tr:hover,
-.action-status tr:hover {
+.enemy-wrap .entity-status tr.selected,
+.action-status tr.selected {
     background: rgba(30, 30, 30, .75);
     color: #ffe500;
     cursor: pointer;
